RESOLVED FIXED208487
Regression(r257354) Crash when trying on watch video on apple.com
https://bugs.webkit.org/show_bug.cgi?id=208487
Summary Regression(r257354) Crash when trying on watch video on apple.com
Chris Dumez
Reported 2020-03-02 16:56:20 PST
Crash when trying on watch video on apple.com: Last Exception Backtrace: 0 CoreFoundation 0x1a6ddd234 __exceptionPreprocess + 216 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/Foundation-1716/CoreFoundation/ObjC.subproj/NSException.m:199) 1 libobjc.A.dylib 0x1a6b069c8 objc_exception_throw + 56 (/Library/Caches/com.apple.xbs/Sources/objc4/objc4-794/runtime/objc-exception.mm:565) 2 CoreFoundation 0x1a6e456ec _CFThrowFormattedException + 112 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/Foundation-1716/CoreFoundation/ObjC.subproj/CFObject.m:1994) 3 CoreFoundation 0x1a6e4f7a0 -[__NSPlaceholderDictionary initWithObjects:forKeys:count:].cold.4 + 48 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/Foundation-1716/CoreFoundation/Collections.subproj/NSPlaceholderDictionary.m:70) 4 CoreFoundation 0x1a6cd9dc4 -[__NSPlaceholderDictionary initWithObjects:forKeys:count:] + 240 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/Foundation-1716/CoreFoundation/Collections.subproj/NSPlaceholderDictionary.m:0) 5 CoreFoundation 0x1a6ccbca0 +[NSDictionary dictionaryWithObjects:forKeys:count:] + 56 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/Foundation-1716/CoreFoundation/Collections.subproj/NSDictionary.m:607) 6 WebCore 0x103d44474 WebCore::MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL(WTF::URL const&) + 2608 7 WebCore 0x103d3d6dc WebCore::MediaPlayerPrivateAVFoundation::setPreload(WebCore::MediaPlayerEnums::Preload) + 1360 8 WebCore 0x103d3933c WebCore::MediaPlayerPrivateAVFoundation::load(WTF::String const&) + 428 9 WebCore 0x10541a6f8 WebCore::MediaPlayer::loadWithNextMediaEngine(WebCore::MediaPlayerFactory const*) + 752 10 WebCore 0x10541a2b0 WebCore::MediaPlayer::load(WTF::URL const&, WebCore::ContentType const&, WTF::String const&) + 1032 11 WebCore 0x104f2df28 WebCore::HTMLMediaElement::loadResource(WTF::URL const&, WebCore::ContentType&, WTF::String const&) + 7284
Attachments
Patch (2.97 KB, patch)
2020-03-02 16:59 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-03-02 16:56:34 PST
Chris Dumez
Comment 2 2020-03-02 16:59:30 PST
WebKit Commit Bot
Comment 3 2020-03-03 06:08:04 PST
Comment on attachment 392216 [details] Patch Clearing flags on attachment: 392216 Committed r257776: <https://trac.webkit.org/changeset/257776>
WebKit Commit Bot
Comment 4 2020-03-03 06:08:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.