Regression(r257354) Crash when trying on watch video on apple.com https://bugs.webkit.org/show_bug.cgi?id=208487 <rdar://problem/59967385>

Reviewed by Eric Carlson.

Use WebCore::Cookie's code to convert to a NSHTTPCookie instead of using toNSHTTPCookie()
which was not quite right, especially after r257354.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL):
(WebCore::toNSHTTPCookie): Deleted.


Canonical link: https://commits.webkit.org/221428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257776 268f45cc-cd09-0410-ab3c-d52691b4dbfc